--- a/Uarung.Web/Views/User/Index.cshtml
+++ b/Uarung.Web/Views/User/Index.cshtml
@@ -5,6 +5,41 @@
     var currentUserId = (string) ViewData[Constant.ViewDataKey.UserId];
 }
 
+@section ScriptFooter
+{
+    <partial name="../Shared/_DataTable.cshtml" model="Model" />
+    <script type="text/javascript">
+        const app = new Vue({
+            el: "#app",
+            data: {
+                size: 8,
+                theads: [
+                    "#",
+                    "Id",
+                    "Name",
+                    "Email",
+                    "Role",
+                    "Phone",
+                    "Gender",
+                    ""
+                ],
+                tbodies: data.map(function(t, i) {
+                    return [
+                        (i + 1),
+                        t.id + "<a> @Url.Action("Edit")/" + t.code,
+                        t.name,
+                        t.email,
+                        t.role,
+                        t.phone,
+                        t.gender === "@Constant.UserGender.MaleValue" ? "@Constant.UserGender.MaleKey" : "@Constant.UserGender.FemaleKey",
+                        "@currentUserId" === t.id ? "" : "<x> @Url.Action("Delete")/" + t.code
+                    ];
+                })
+            }
+        });
+    </script>
+}
+
 <div class="d-flex mb-5">
     <h3 class="mr-auto">User</h3>
     <a class="btn btn-outline-primary" asp-controller="User" asp-action="Add">
@@ -12,51 +47,10 @@
     </a>
 </div>
 
-<table class="table">
-    <thead class="thead-light">
-    <tr>
-        <th scope="col">#</th>
-        <th scope="col" style="width: 20px">Id</th>
-        <th scope="col">Name</th>
-        <th scope="col">Email</th>
-        <th scope="col">Role</th>
-        <th scope="col">Phone</th>
-        <th scope="col">Gender</th>
-        <th></th>
-    </tr>
-    </thead>
-    <tbody>
-    @if (Model != null)
-    {
-        var i = 1;
-        foreach (var user in Model)
-        {
-            <tr>
-                <td>@i</td>
-                <td>
-                    <a href="@Url.Action("Edit", new {id = user.Id})">
-                        @user.Id
-                    </a>
-                </td>
-                <td>@user.Name</td>
-                <td>@user.Email</td>
-                <td>@user.Role</td>
-                <td>@user.Phone</td>
-                <td>@(user.Gender.Equals(Constant.UserGender.MaleValue) ? Constant.UserGender.MaleKey : Constant.UserGender.FemaleKey)</td>
-                <td>
-                    @if (user.Id != currentUserId)
-                    {
-                        <form action="@Url.Action("Delete", new { id = user.Id })">
-                            <button type="submit" class="btn btn-danger btn-sm p-0 lh-0 rounded-circle">
-                                <span data-feather="x"></span>
-                            </button>
-                        </form>
-                    }
-                </td>
-            </tr>
-
-            i++;
-        }
-    }
-    </tbody>
-</table>
+<div id="app" class="mb-5" v-cloak>
+    <data-table
+        :size="size"
+        :theads="theads"
+        :tbodies="tbodies">
+    </data-table>
+</div>
