--- a/Uarung.Web/Views/Shared/_DataTable.cshtml
+++ b/Uarung.Web/Views/Shared/_DataTable.cshtml
@@ -2,7 +2,7 @@
 
 <input type="hidden" id="source-data-table" value='@Json.Serialize(Model)'/>
 
-<script type="text/javascript" src="~/lib/vue.min.js"></script>
+<script type="text/javascript" src="~/lib/vue.js"></script>
 <script type="text/x-template" id="anchor">
     <a :href="href">{{text}}</a>
 </script>
@@ -27,6 +27,32 @@
 </script>
 <script type="text/x-template" id="data-table-template">
     <div>
+        <div class="d-flex mb-5">
+            <h3 class="d-inline-flex">{{ title }}</h3>
+            <div class="d-flex align-items-center ml-auto">
+                <div class="input-group mr-3">
+                    <div class="input-group-prepend">
+                        <div class="input-group-text">
+                            <svg xmlns="http://www.w3.org/2000/svg" 
+                                 class="feather feather-search sc-dnqmqq jxshSx" 
+                                 width="24" 
+                                 height="24" 
+                                 viewBox="0 0 24 24" 
+                                 fill="none" 
+                                 stroke="currentColor" 
+                                 stroke-width="2" 
+                                 stroke-linecap="round" 
+                                 stroke-linejoin="round">
+                                <circle cx="11" cy="11" r="8"></circle>
+                                <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
+                            </svg>
+                        </div>
+                    </div>
+                    <input type="text" class="form-control" v-model="searchKeyword" :placeholder="searchPlaceholder"/>
+                </div>
+                <slot name="action"></slot>
+            </div>
+        </div>
         <table class="table">
             <thead class="thead-light">
                 <tr>
@@ -112,10 +138,15 @@
         template: "#data-table-template",
         data: function() {
             return {
-                pageNumber: 0
+                pageNumber: 0,
+                searchKeyword: ""
             };
         },
         props: {
+            title: {
+                type: String,
+                default: ""
+            },
             theads: {
                 type: Array,
                 required: true,
@@ -130,6 +161,16 @@
                 type: Number,
                 required: false,
                 default: 10
+            },
+            searchPlaceholder: {
+                type: String,
+                required: false,
+                default: ""
+            },
+            searchByIndex: {
+                type: Number,
+                required: false,
+                default: 0
             }
         },
         computed: {
@@ -146,7 +187,17 @@
                 const start = this.pageNumber * this.size;
                 const end = start + this.size;
 
-                return this.tbodies.slice(start, end);
+                return this.filteredTbodies.slice(start, end);
+            },
+            filteredTbodies: function () {
+                if (this.seachKeyword === "")
+                    return this.tbodies;
+
+                return this.tbodies
+                    .filter(function(tb) {
+                        return tb[this.searchByIndex].toString().toLowerCase()
+                            .includes(this.searchKeyword.toLowerCase());
+                    }.bind(this));
             }
         }
     });
