--- a/Uarung.Web/Views/Shared/_DataTable.cshtml
+++ b/Uarung.Web/Views/Shared/_DataTable.cshtml
@@ -32,7 +32,7 @@
             <div class="d-flex align-items-center ml-auto">
                 <div class="input-group mr-3">
                     <div class="input-group-prepend">
-                        <div class="input-group-text">
+                        <div class="input-group-text bg-transparent">
                             <svg xmlns="http://www.w3.org/2000/svg" 
                                  class="feather feather-search sc-dnqmqq jxshSx" 
                                  width="24" 
