--- a/Uarung.Web/Views/Product/Edit.cshtml
+++ b/Uarung.Web/Views/Product/Edit.cshtml
@@ -48,7 +48,7 @@
 }
 
 <div class="d-flex mb-5">
-    <h3 class="mr-auto">Add Product</h3>
+    <h3 class="mr-auto">Edit Product</h3>
 </div>
 
 <div class="row">
