--- a/Uarung.Web/Views/Shared/_ScriptHeader.cshtml
+++ b/Uarung.Web/Views/Shared/_ScriptHeader.cshtml
@@ -1,2 +1,3 @@
-<link href="~/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
+@*<link href="~/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>*@
+<link href="~/lib/bootstrap/css/bootstrap.theme.min.css" rel="stylesheet"/>
 <link href="~/css/style-global.css" rel="stylesheet"/>
