--- a/Uarung.Web/Views/Transaction/Report.cshtml
+++ b/Uarung.Web/Views/Transaction/Report.cshtml
@@ -9,8 +9,17 @@
     <link href="~/lib/air-datepicker/datepicker.min.css" rel="stylesheet"/>
     <style>
         .datepicker--day-name {
-            color: #007bff;
+            color:var(--blue);
             font-weight: bold;
+        }
+        .datepicker--cell.-current-{
+            color:var(--blue);
+        }
+        .datepicker--cell.-in-range-{
+            background:#dc35467c;
+        }
+        .datepicker--cell.-selected-, .datepicker--cell.-selected-.-current- {
+            background: var(--blue);
         }
     </style>
 }
