--- a/Uarung.Web/wwwroot/css/style-login.css
+++ b/Uarung.Web/wwwroot/css/style-login.css
@@ -10,10 +10,10 @@ body {
     -ms-flex-align: center;
     -ms-flex-pack: center;
     -webkit-box-align: center;
-    align-items: center;
+    /* align-items: center; */
     -webkit-box-pack: center;
     justify-content: center;
-    padding-top: 40px;
+    padding-top: 0px;
     padding-bottom: 40px;
     background-color: #f5f5f5;
 }
